welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:15: error: not found: value dogHousse
  dogHousse()
  ^