welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse()
{
  baisseBrosse()
  for (i <- 1 to 4)
  {
    avance()
		avance()
		left()
  }
  leveBrosse()
}

for (i <- 1 to 4)
{
  dogHousse()
  avance()
  avance()
  avance()
  avance()
}